--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -44,6 +44,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="emitirLicenciaUI.html">Emitir licencia</a></li>
                 <li><a class="dropdown-item" href="listadoLicenciasExpiradas.html">Listado licencias expiradas</a></li>
+                <li><a class="dropdown-item" href="listadoLicenciasVigentes.html">Listado licencias vigentes</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
