--- a/src/main/resources/static/listadoLicenciasExpiradas.html
+++ b/src/main/resources/static/listadoLicenciasExpiradas.html
@@ -41,6 +41,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="emitirLicenciaUI.html">Emitir licencia</a></li>
                             <li><a class="dropdown-item" href="listadoLicenciasExpiradas.html">Listado licencias expiradas</a></li>
+                            <li><a class="dropdown-item" href="listadoLicenciasVigentes.html">Listado licencias vigentes</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -108,7 +109,7 @@
         <div class="show_results" id="show_results">
             <table class="table">
                 <thead>
-                <tr>
+                <tr class="table_column">
                     <th>Fecha de expiración</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
