--- a/src/main/resources/static/listadoLicenciasVigentes.html
+++ b/src/main/resources/static/listadoLicenciasVigentes.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modificar Titular</title>
+  <meta charset="UTF-8">
+  <title>Listado licencias vigentes</title>
   <!--GoogleFonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +12,7 @@
   />
   <!--CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/estilosModificarTitular.css" />
+  <link rel="stylesheet" href="./css/estilosListadoLicenciaVigente.css" />
   <!--FontAwesome-->
   <script
           src="https://kit.fontawesome.com/0ab9ff7f01.js"
@@ -34,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html" style="color: black">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="pantallaPrincipal.html" style="color: black">Inicio</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
@@ -73,95 +71,32 @@
           </svg>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
-          <li><a class="dropdown-item" id="goProfile" href="">Ver perfil</a></li>
-          <li><a class="dropdown-item" href="#" id="logout">Cerrar sesión</a></li>
+          <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
+          <li class="dropdown-item" id="logout">Cerrar sesión</li>
         </ul>
       </ul>
     </div>
   </div>
 </nav>
 <section class="container">
-  <h2>Modificar un Titular</h2>
-  <h4>Complete los campos a modificar del titular</h4>
+  <h2>Listado licencias vigentes</h2>
+  <h4>Complete los siguientes campos y seleccione "Buscar" para obtener un listado con las licencias vigentes correspondientes</h4>
   <form action="" class="fields_to_complete" id="fields_to_complete" name="form">
     <div class="container_fields">
       <div class="fields" id="field_name">
-        <label for="name" class="field_label">Nombre (*)</label>
+        <label for="name" class="field_label">Nombre</label>
         <input id="name" class="field_input" type="text" name="name" />
         <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
       </div>
 
       <div class="fields" id="field_surname">
-        <label for="surname" class="field_label">Apellido (*)</label>
+        <label for="surname" class="field_label">Apellido</label>
         <input id="surname" class="field_input" type="text" name="surname" />
         <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
       </div>
 
-      <div class="fields" id="field_type_document">
-        <label for="type_document" class="field_label">Tipo N° documento (*)</label>
-        <select class="group_document" name="type_document" id="type_document">
-          <option value="SELECCIONE" selected>SELECCIONE</option>
-          <option value="DNI">DNI</option>
-          <option value="PASAPORTE">PASAPORTE</option>
-          <option value="LU">LU</option>
-          <option value="LE">LE</option>
-        </select>
-      </div>
-
-      <div class="fields" id="field_dni">
-        <label for="n_document" class="field_label">N° documento (*)</label>
-        <input id="n_document" class="field_input" type="number" name="dni" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
-      </div>
-
-      <div class="fields" id="field_email">
-        <label for="email" class="field_label">E-mail (*)</label>
-        <input id="email" class="field_input" type="email" name="email" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El correo ingresado no tiene el formato adecuado</p>
-      </div>
-
-      <div class="fields" id="field_birthday">
-        <label for="birthday" class="field_label">Fecha de nacimiento (*)</label>
-        <input id="birthday" class="field_input" type="date" name="birthday" min="1920-01-01" max="2999-12-31"/>
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La fecha ingresada es incorrecta</p>
-      </div>
-
-      <div class="fields" id="field_address_street">
-        <label for="street" class="field_label">Calle (*)</label>
-        <input id="street" class="field_input" type="text" name="address_street" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La calle ingresada no tiene el formato adecuado</p>
-      </div>
-
-      <div class="fields" id="field_address_number">
-        <label for="number" class="field_label">N° (*)</label>
-        <input id="number" class="field_input" type="number" name="address_number" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El número ingresado no tiene el formato adecuado</p>
-      </div>
-
-      <div class="fields" id="field_address_floor">
-        <label for="floor" class="field_label">Piso </label>
-        <input id="floor" class="field_input" type="number" name="floor" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El piso ingresado no tiene el formato adecuado</p>
-      </div>
-
-      <div class="fields" id="field_address_apartment">
-        <label for="apartment" class="field_label">Departamento </label>
-        <input id="apartment" class="field_input" type="char" name="apartment" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El departamento ingresado no tiene el formato adecuado</p>
-      </div>
-
-      <div class="fields" id="field_address_city">
-        <label for="city" class="field_label">Localidad </label>
-        <input id="city" class="field_input" type="char" name="city" value="Santa Fe" readonly />
-      </div>
-
-      <div class="fields" id="field_address_province">
-        <label for="province" class="field_label">Provincia </label>
-        <input id="province" class="field_input" type="char" name="province" value="Santa Fe" readonly />
-      </div>
-
       <div class="fields" id="field_blood">
-        <label for="type_blood" class="field_label">Grupo sanguíneo (*) </label>
+        <label for="type_blood" class="field_label">Grupo sanguíneo</label>
         <select class="group_blood" name="type_blood" id="type_blood">
           <option selected>SELECCIONE</option>
           <option value="A">A</option>
@@ -172,7 +107,7 @@
       </div>
 
       <div class="fields" id="field_rh">
-        <label for="type_rh" class="field_label">RH (*) </label>
+        <label for="type_rh" class="field_label">RH </label>
         <select class="group_blood" name="type_rh" id="type_rh">
           <option selected>SELECCIONE</option>
           <option value="POSITIVO">+</option>
@@ -181,33 +116,74 @@
       </div>
 
       <div class="fields" id="field_donor">
-        <label for="donor" class="field_label">Es donante (*) </label>
-        <select class="group_document" name="donor" id="donor">
+        <label for="donor" class="field_label">Es donante </label>
+        <select class="group_blood" name="donor" id="donor">
           <option selected>SELECCIONE</option>
           <option value="SI">SI</option>
           <option value="NO">NO</option>
         </select>
       </div>
 
-      <p class="incomplete_field" id="incomplete_field" ><i class="fa-solid fa-circle-exclamation"></i> Los campos (*) son obligatorios</p>
-
       <button type="submit" class="button" id="button">
-        <i class="fa-sharp fa-solid fa-floppy-disk"></i> Guardar
+        <i class="fa-solid fa-magnifying-glass"></i> Buscar
       </button>
-
-      <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El titular ha sido modificado con exito</p>
-      <p class="error_message" id="error_message"></p>
     </div>
   </form>
-  <script src="../static/js/modificarTitularValidaciones.js"></script>
-  <!--Bootstrap js-->
-  <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-          crossorigin="anonymous"
-  ></script>
+
+  <div class="container_filter" id="container_filter">
+    <div class="fields" id="field_since">
+      <label for="since" class="field_label">Fecha desde:</label>
+      <br>
+      <input id="since" class="field_input" type="date" name="since" min="1920-01-01" max="2999-12-31"/>
+    </div>
+    <div class="fields" id="field_until">
+      <label for="until" class="field_label">Fecha hasta:</label>
+      <br>
+      <input id="until" class="field_input" type="date" name="until" min="1920-01-01" max="2999-12-31"/>
+    </div>
+    <div class="fields">
+      <label for="type_license" class="field_label">Tipo de licencia</label>
+      <select class="field_input" name="lenguajes" id="type_license">
+        <option value="SELECCIONE" selected>SELECCIONE</option>
+        <option value="A">A</option>
+        <option value="B">B</option>
+        <option value="C">C</option>
+        <option value="D">D</option>
+        <option value="E">E</option>
+        <option value="F">F</option>
+        <option value="G">G</option>
+      </select>
+    </div>
+  </div>
+  <div class="show_results" id="show_results">
+    <table class="table">
+      <thead>
+      <tr class="table_column">
+        <th>Fecha de expiración</th>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>N° documento</th>
+        <th>Domicilio</th>
+        <th>Fecha de emisión</th>
+        <th>Tipo de clase</th>
+        <th>Estado</th>
+      </tr>
+      </thead>
+      <tbody id="list-licenseholders">
+      </tbody>
+    </table>
+  </div>
 </section>
 <!-- Footer -->
 <footer class="text-center"> 2022 © | Design by TripleA</footer>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
+<script src="../static/js/listadoLicenciasVigentesValidaciones.js"></script>
+<!--Bootstrap js-->
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"
+></script>
+
 </body>
 </html>
