--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -170,7 +170,7 @@
           </ul>
         </div>
         <div style="text-align:center;">
-          <button class="button btn btn-primary disabled" id="buttonEmitir" data-bs-toggle="modal" data-bs-target="#emitModal">Emitir</button>
+          <button class="button btn btn-primary disabled" id="buttonEmitir">Emitir</button>
         </div>
       </div>
     </section>
@@ -219,7 +219,7 @@
       </div>
     </div>
     <div class="modal fade" id="emitModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h3>Licencia emitida</h3>
@@ -239,10 +239,24 @@
       </div>
     </div>
 
+    <div class="modal fade" id="errorModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3>Licencia ya existente</h3>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>El titular <b id="errorModal-name"></b>, <b id="errorModal-type"></b> <b id="errorModal-identification"></b> ya posee una licencia vigente de la clase seleccionada.<br><br>
+            Si desea renovarla dirijase al apartado "RENOVAR LICENCIA".</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="text-center"> 2022 © | Design by TripleA</footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
-    <!--Bootstrap js-->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
