--- a/src/main/resources/static/listadoLicenciasVigentes.html
+++ b/src/main/resources/static/listadoLicenciasVigentes.html
@@ -86,13 +86,11 @@
       <div class="fields" id="field_name">
         <label for="name" class="field_label">Nombre</label>
         <input id="name" class="field_input" type="text" name="name" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
       </div>
 
       <div class="fields" id="field_surname">
         <label for="surname" class="field_label">Apellido</label>
         <input id="surname" class="field_input" type="text" name="surname" />
-        <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
       </div>
 
       <div class="fields" id="field_blood">
@@ -169,7 +167,7 @@
         <th>Estado</th>
       </tr>
       </thead>
-      <tbody id="list-licenseholders">
+      <tbody id="list-licenses"  class="text-center">
       </tbody>
     </table>
   </div>
