--- a/src/main/resources/static/historial.html
+++ b/src/main/resources/static/historial.html
@@ -88,7 +88,7 @@
 <section class="container p-4">
     <h2 class="mb-4">Historial de Licencias</h2>
     <b class="h4">Datos del titular</b>
-    <div class="mr-4 mt-4 d-flex justify-content-between align-items-center">
+    <div class="mr-4 mt-4 d-flex justify-content-around align-items-center">
         <p>Nombre: <b id="name"></b></p>
         <p>Apellido: <b id="surname"></b></p>
         <p>Tipo N° documento: <b id="type"></b></p>
