--- a/src/main/resources/static/historial.html
+++ b/src/main/resources/static/historial.html
@@ -180,6 +180,33 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="renewModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header d-block">
+                <b>¿Esta seguro que desea modificar los datos de la licencia?</b>
+                <p style="margin-top:20px;">Se procedera a dar de baja la licencia actual pudiendo emitir una nueva luego de haber actualizado los datos.</p>
+            </div>
+            <div class="modal-body text-center">
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" aria-label="Close">Cancelar</button>
+                <button class="btn btn-primary" id="modifyBtn">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="expireModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <p>Se ha dado de baja la licencia con exito.</p>
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" aria-label="Close" onclick="loadRecords()">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Footer -->
 <footer class="text-center"> 2022 © | Design by TripleA</footer>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
