--- a/src/main/resources/static/listadoLicenciasExpiradas.html
+++ b/src/main/resources/static/listadoLicenciasExpiradas.html
@@ -120,7 +120,7 @@
                     <th>Estado</th>
                 </tr>
                 </thead>
-                <tbody id="list-licenseholders">
+                <tbody id="list-licenses" class="text-center">
                 </tbody>
             </table>
         </div>
